--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
         integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
         crossorigin=""></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="favicon.ico">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/9c0f301054.js"></script>
@@ -43,7 +43,7 @@
 
         // De marker veranderen in een ISS plaatje
         var ISSIcon = L.icon({
-            iconUrl: 'iss.png',
+            iconUrl: 'images/iss.png',
             iconSize: [50, 32],
             iconAnchor: [25, 16]
         });
